Try enable notification through FCM

--- a/app.json
+++ b/app.json
@@ -18,11 +18,19 @@
       "bundleIdentifier": "com.apitx.GrowSync"
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
+      "permissions": [
+        "INTERNET",
+        "RECEIVE_BOOT_COMPLETED",
+        "WAKE_LOCK",
+        "VIBRATE",
+        "com.google.android.c2dm.permission.RECEIVE"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.apitx.GrowSync"
+      "package": "com.apitz.GrowSync"
     },
     "web": {
       "bundler": "metro",
