--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/messaging": "^21.6.1",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.20",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
@@ -40,16 +42,18 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-dev-client": "~5.0.6"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "^15.1.3",
     "@types/firebase": "^2.4.32",
+    "@types/node": "^22.10.2",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint": "^9.17.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
